Improved logging in the insertion to db #4.